actually fixed clipped text

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -94,7 +94,7 @@
     h1, h2, h3 {
 
         &.lg-heading {
-            font-size: 5rem;
+            font-size: 4rem;
         }
 
         &.sm-heading, &.sm-heading-top {
